@@ -1,21 +1,27 @@
+High priority:
+o closing windows
+o better support for use with proxy server
+
 Medium priority:
 o Enable client code to write directly to the output stream of a message body request
 o Provide customization for table to text
 o Support optional tags which hide their contents (as in IFRAME, OBJECT, etc.)
 o Check conformance with RFC 2109 - not currently sending $Version=1 string
-o Support IFRAME tag
-o Support _new frame tag
 o Documentation, Documentation
 
 JavaScript priorities:
+o Window.name for frames
+o Window.frames[]
+o Window.parent
+o Window.top
 o Document.write - may required substantial parser rewrite
-o Navigator object
+
 
 Possibles:
-o replace JTidy with a simpler custom parser
+o replace JTidy with a simpler custom parser or NekoHTML
 
 
 Low priority:
-o history on web conversation
+o history on web window
 o Support digest HTTP Authentication
 
